Replace JNA with Java 25 FFM bindings
Require Java 25 and prepare the 2.0 release line. Replace the Windows and macOS bindings with the Foreign Function and Memory API. Keep Linux certificate discovery and the public certificate entry point unchanged.

Preserve the Windows store locations, intermediate validation, and cache-only revocation checks. Preserve the macOS trust constraints and user-before-admin lookup. Keep SecPolicyCreateSSL(false) because the server policy rejects long-lived private certificates. The TLS stack still checks certificate usage.

Use 32-bit OSStatus values and capture GetLastError with each Windows call. Scope native buffers with arenas. Release certificate contexts, chains, and Core Foundation objects on exit, including CFError objects.

Add layout tests and native tests that do not change certificate stores. Compare macOS system roots with the security tool instead of assuming a particular CA remains installed. Update CI, CodeQL, release settings, and native access documentation.

Validation on macOS arm64 with JDK 25: mvn clean verify succeeds with 35 tests, 8 skipped. The executable JAR runs with --illegal-native-access=deny. Tests that change certificate stores remain opt-in.